# web3-dex-terminal-bot

./: .env.example  .gitignore  README.md  alembic.ini  bot.py  config.toml  contract.sol  pyproject.toml
alembic/: env.py
chains/: __init__.py  base.py  bsc.py  dto.py  ethereum.py  registery.py
clients/evm/: base.py  dto.py  scanner.py  swap.py  token.py  wallet.py
clients/evm/dex/: aerodrome.py  dto.py  uniswap.py
db/: __init__.py  chain.py  mixins.py  network.py  token.py  user.py  user_chain.py  user_network.py  wallet.py
db/repositories/: base.py  chain.py  models.py  network.py  token.py  user.py  wallet.py
dialogs/: __init__.py  getters.py  handlers.py
dialogs/chains_menu/: dialogs.py  getters.py  handlers.py
dialogs/settings_menu/: dialogs.py  filters.py  getters.py  handlers.py
dialogs/user_menu/: dialogs.py
dialogs/wallets_menu/: dialogs.py  filters.py  getters.py  handlers.py
enums/: chain.py  network.py
filters/: address.py  admin.py
handlers/: __init__.py  address.py  start.py
keyboards/: token_info.py
middlewares/: db.py  redis.py
models/: dtos.py
networks/: __init__.py  base.py  bsc.py  ethereum.py  registery.py
services/: dto.py  wallet.py
states/: dialog_states.py  fsm_states.py
taskiq_app/: broker.py  scheduler.py  worker.py
taskiq_app/tasks/: __init__.py  eth_price.py
utils/: utils.py
web3_clients/: base.py  factory.py  router.py  token.py  wallet.py
web3_clients/dex/: uniswap.py
